--- a/Health One Application/assets/css/styles.css
+++ b/Health One Application/assets/css/styles.css
@@ -1,9 +1,33 @@
-body {
-  margin:0;
-  width:100%;
+@media (max-width:992px) {
+  .container {
+    max-width:100%;
+  }
 }
 
-.row {
-  align-items:center;
+@media (max-width:767px) {
+  #navcol-1 {
+    padding-top:10px;
+    padding-bottom:10px;
+    text-align:center;
+  }
+}
+
+@media (max-width:767px) {
+  .navbar .container .navbar-brand img {
+    height:60px;
+    margin-top:10px;
+    margin-bottom:10px;
+  }
+}
+
+@media (min-width:767px) {
+  .navbar .container .navbar-brand img {
+    height:80px;
+    margin-bottom:10px;
+  }
+}
+
+body {
+  background-repeat:round;
 }
 
